# cookiecutter-pypackage

./: .bumpversion.cfg  .travis.yml  README.md  cookiecutter.json
.github/workflows/: main.yml  make_example_repo.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.bats
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  quick_test.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
{{ cookiecutter.project_name }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_name }}/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_report.md
{{ cookiecutter.project_name }}/.github/workflows/: build_maybe_release.yml  ci.yml  main.yml  test.yml
{{ cookiecutter.project_name }}/docs/: Makefile  api.md  autodoc.rst  conf.py  explanations.rst  how-tos.rst  index.md  index.rst  make.bat  reference.rst  tutorials.rst
{{ cookiecutter.project_name }}/newsfragments/: README.md
{{ cookiecutter.project_name }}/requirements/: dev_requirements.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt  requirements_loose.txt  requirements_tests.txt  requirements_utils.txt  test_requirements.txt
{{ cookiecutter.project_name }}/src/{{ cookiecutter.module_name }}/: __init__.py  py.typed
{{ cookiecutter.project_name }}/src/{{ cookiecutter.slug_name }}/: __init__.py
{{ cookiecutter.project_name }}/tests/: __init__.py  test_{{ cookiecutter.module_name }}.py  test_{{ cookiecutter.slug_name }}.py
{{ cookiecutter.project_name }}/{{ cookiecutter.slug_name }}/: __init__.py
