# Coverage config
[coverage:run]
source = {{ cookiecutter.slug_name }}

[coverage:report]
fail_under = 80

# autopep8 config
[pep8]
in-place = True
recursive = True
max-line-length = 88 
verbose = 1
exclude = venv, build, dist, .git, __pycache__, docs

# flake8 config
[flake8]
max-line-length = 88 
ignore = E121,E123,E126,E226,E24,E402,E704,W503,W504
exclude = venv, build, dist, .git, __pycache__, docs

# bumpversion config
[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:{{ cookiecutter.slug_name }}/__init__.py]

[bumpversion:file:README.md]

[bumpversion:file:docs/conf.py]

# isort config
[isort]
not_skip = __init__.py
multi_line_output = 3
include_Trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

#check-manifest config
[check-manifest]
ignore =
    .editorconfig
    tox.ini
    requirements.txt
    requirements*
    docs*
    .github*
    tests*
    .pyup.yml
    .readthedocs.yml
    .pylintrc


# bdist_wheel config
# Uncomment for a universal wheel
#[bdist_wheel]
#universal = 1

[metadata]
license_file = LICENSE
