[metadata]
name = {{ cookiecutter.pip_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
license_file = LICENSE

[options]
packages = find:
;install_requires =
;    requests
python_requires = >=3.6,<4
include_package_data = True
package_dir = =src

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    {{ cookiecutter.pip_name }} = {{ cookiecutter.module_name }}.cli:main

[options.extras_require]
dev =
    black
    blacken-docs
    build>=0.2.1
    bump2version
    invoke
    isort[pyproject]>=5.0.2
    pip>=21.1
    pip-tools
    pylint>=2.6.0
    shiv
    sphinx-autobuild
    twine
    wheel
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
tests =
    coverage[toml]
    pytest
    pytest-cov
    tox
    tox-pyenv
